Replace all emojis with SVG icons, fix button alignment on app development card, and add parallax section with parallexpage2.jpg background to services page

--- a/css/main.css
+++ b/css/main.css
@@ -692,7 +692,7 @@ body {
     }
     
     .parallax-5 {
-        background-image: url('../images/websiteparallexpage.jpg');
+        background-image: url('../images/parallexpage2.jpg');
         background-attachment: fixed;
         background-position: center;
         background-size: cover;
